// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input  should render an input 1`] = `
<input
  className="Input__Input-s1bt2nh8-0 eqmgTw"
/>
`;

exports[`Input  should support error 1`] = `
<input
  className="Input__Input-s1bt2nh8-0 igwhJu"
/>
`;
